[package]
name = "dumpfiles"
version = "0.1.0"
description = "A command-line tool for generating structured text representations of directory contents"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arbfay/dumpfiles"
repository = "https://github.com/arbfay/dumpfiles"
keywords = ["cli", "filesystem", "directory", "documentation"]
categories = ["command-line-utilities", "development-tools", "filesystem"]

[lib]
name = "dumpfiles"
path = "src/lib.rs"

[[bin]]
name = "dumpfiles"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
glob = "0.3"
anyhow = "1.0.86"
log = "0.4"
env_logger = "0.11"
